@@ -18,6 +18,7 @@ wikicalendar-2.0.0 - new 'bundled macros' revision (not yet released)
  * #9568: Can Babel be made an optional component for 0.12?
  * #9718: Resolve relative wiki paths in pattern for wiki pages too
  * #9719: Regression: WikiTicketCalendar doesn't show >1 milestones per day.
+ * restored full backwards-compatibility down to Trac 0.11
 
  new features
  * macro collection based on WikiTicketCalendar `trunk` branch pulled into
